Learnt a few things about styles. You have to create a new style instance otherwise changes to existing styles bleed across all cells. For now using a naive approach of 'if you change something create a new style'. This probably creates more styles in the XML than you would want and it would be better to cache unique styles and reuse them when possible.

--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>15</source>
+                    <target>15</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
