--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mycodefu</groupId>
-    <artifactId>excel-poi-example</artifactId>
+    <artifactId>fluent-excel-poi</artifactId>
     <version>0.0.1</version>
 
     <properties>
