Run tests on a matrix of Java 8, 11 and 15

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,9 @@ workflows:
   maven_test:
     jobs:
       - maven/test:
-          executor: [java8, java11, java15]
+          matrix:
+            parameters:
+              executor: [java8, java11, java15]
 
 executors:
   java8:
