--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,15 +5,24 @@ orbs:
 
 jobs:
   publish:
-    executor: java15
+    executor: java8
     steps:
       - checkout
       - run:
           name: Overwrite Settings PWD
-          command: sed '/PWD/s/PWD/'${BINTRAY_API_KEY}'/g' settings.template.xml > settings.xml
+          command: sed '/PWD/s/PWD/'${GITHUB_TOKEN}'/g' settings.template.xml > settings.xml
       - run:
-          name: Publish
-          command: mvn deploy
+          name: Publish to GitHub Packages
+          command: mvn --settings settings.xml deploy
+
+publish-filter: &publish-filter
+  filters:
+    # ignore any commit on any branch by default
+    branches:
+      ignore: /.*/
+    # only act on version tags in the format 0.0.1
+    tags:
+      only: /^\d+\.\d+\.\d+$/
 
 workflows:
   test-and-publish:
@@ -23,6 +32,7 @@ workflows:
             parameters:
               executor: [java8, java11, java15]
       - publish:
+#          <<: *publish-filter
           requires:
             - maven/test-java8
             - maven/test-java11
